test_programs/compile_failure/noirc_frontend_tests_object_type_must_be_known_in_method_call/src/main.nr

    pub fn foo<let N: u32>() -> [Field; N] {
        let array = [];
        let mut bar = array[0];
        let _ = bar.len();
        bar
    }

    fn main() {}
    